--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
     "build": "yarn run clean && gatsby build",
-    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public -b master",
     "clean": "rimraf .cache public",
     "flow": "flow",
     "lint:js": "eslint --cache --ext .js,.jsx .",
@@ -46,6 +46,7 @@
     "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-flow": "^1.3.11",
+    "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-google-gtag": "^2.1.10",
     "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-netlify": "^2.3.11",
