--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 before_script:
   - npm install -g gatsby-cli
 node_js:
-  - '10'
+  - "10"
 deploy:
   provider: script
   script: yarn install && yarn deploy
   skip_cleanup: true
   on:
-    branch: master
+    branch: dev
