--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-flow": "^1.3.11",
     "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-google-gtag": "^2.1.10",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-netlify-cms": "^4.3.11",
