configure git global name and email

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn run lint
       - run: yarn run test --runInBand --no-cache
+      - run: git config --global user.email cjnygard@gmail.com && git config --global user.name "github-actions"
       - name: Setup kernel for react native, increase watchers
         run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p && cat /etc/sysctl.conf
       - run: 'cat /etc/sysctl.conf && echo "chok: $CHOKIDAR_USEPOLLING" && yarn deploy'
