fix how GH_TOKEN is passed into package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "develop": "yarn run clean && gatsby develop",
     "build": "yarn run clean && gatsby build",
     "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public -b master",
-    "ghdeploy": "gatsby build --prefix-paths && gh-pages -d public -r https://${{ secrets.GH_TOKEN }}@github.com/cjnygard/arityparity-blog.git",
+    "ghdeploy": "gatsby build --prefix-paths && gh-pages -d public -r https://${GH_TOKEN}@github.com/cjnygard/arityparity-blog.git",
     "clean": "rimraf .cache public",
     "flow": "flow",
     "lint:js": "eslint --cache --ext .js,.jsx .",
