--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-typescript": "^2.4.16",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-copy-linked-files": "^2.3.11",
     "gatsby-remark-external-links": "0.0.4",
@@ -71,6 +72,7 @@
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
+    "gatsby-transformer-yaml": "^2.4.10",
     "graceful-fs": "^4.2.4",
     "invariant": "^2.2.4",
     "katex": "^0.12.0",
@@ -83,7 +85,8 @@
     "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "rxjs": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.4",
@@ -92,6 +95,9 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "autoprefixer": "9.8.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
