fix up jest tests and linting
- fix canned data
- add tags and categories retrievals to site-metadata
- pass data into Sidebar to make it easier to test
- update snapshots

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\" \"yarn flow\"",
     "test": "jest --config ./jest/jest-config.js",
     "test:coverage": "jest --coverage --config ./jest/jest-config.js",
-    "test:watch": "jest --watch --config ./jest/jest-config.js"
+    "test:watch": "jest --watch --config ./jest/jest-config.js",
+    "test:debugger": "node --inspect node_modules/.bin/jest --runInBand",
+    "test:debugger:watch": "node --inspect node_modules/.bin/jest --runInBand --watch"
   },
   "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
   "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
