--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.19",
     "gatsby-remark-katex": "^3.3.10",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-remark-responsive-iframe": "^2.4.11",
