--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-watch": "7.0.0",
     "flow-bin": "^0.129.0",
     "flow-typed": "^3.2.0",
+    "flowgen": "1.11.0",
     "gh-pages": "3.1.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.1.0",
