Found and fixed broken image paths.

--- a/site/config/author.yaml
+++ b/site/config/author.yaml
@@ -21,7 +21,7 @@
 - 'id': 'djktno'
   'name': 'Dan Kunnath'
   'bio': '/about-dkunnath'
-  'photo': '/dan-photo.png'
+  'photo': '/dk-photo.jpg'
   'contacts':
     'email': ''
     'facebook': ''
