Fixed profile photo and updated about me.

--- a/site/config/author.yaml
+++ b/site/config/author.yaml
@@ -19,7 +19,7 @@
     'youtube': ''
     'soundcloud': ''
 - 'id': 'djktno'
-  'name': 'Dan Kunnath'
+  'name': 'Daniel Kunnath'
   'bio': '/about-dkunnath'
   'photo': '/dk-photo.jpg'
   'contacts':
@@ -27,10 +27,10 @@
     'facebook': ''
     'telegram': ''
     'twitter': ''
-    'github': ''
+    'github': 'djktno'
     'rss': ''
     'vkontakte': ''
-    'linkedin': ''
+    'linkedin': 'danielkunnath'
     'instagram': ''
     'line': ''
     'gitlab': ''
